findlib is optionnal

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -42,9 +42,20 @@ WITH_GRAPHICS ?= $(shell if [ -f `ocamlfind query graphics 2> /dev/null`/graphic
 WITH_REACT ?= $(shell if [ -f `ocamlfind query reactiveData 2> /dev/null`/reactiveData.cma ]; then echo YES; else echo NO; fi)
 WITH_TYXML ?= $(shell if [ -f `ocamlfind query tyxml 2> /dev/null`/tyxml_f.cma ]; then echo YES; else echo NO; fi)
 
+WITH_FINDLIB ?= YES
 
 NATDYNLINK ?= $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
 
 METAOCAML ?= 0
 
 VERSION_GIT := $(shell git log -n1 --pretty=format:%h 2> /dev/null)
+
+ifeq "${WITH_FINDLIB}" "YES"
+FINDLIB_CPPO=-D FINDLIB
+endif
+
+%.ml: %.cppo.ml
+	cppo $< -o $@ -V OCAML:`ocamlc -version` -D "JSOO_VERSION `cat ../VERSION`" $(FINDLIB_CPPO)
+
+%.cppo: %
+	cppo $< -o $@ -V OCAML:`ocamlc -version` -D "JSOO_VERSION `cat ../VERSION`" $(FINDLIB_CPPO)
