--- a/Makefile.conf
+++ b/Makefile.conf
@@ -57,5 +57,5 @@ endif
 %.ml: %.cppo.ml
 	cppo $< -o $@ -V OCAML:`ocamlc -version` -D "JSOO_VERSION `cat ../VERSION`" $(FINDLIB_CPPO)
 
-%.cppo: %
+%: %.cppo
 	cppo $< -o $@ -V OCAML:`ocamlc -version` -D "JSOO_VERSION `cat ../VERSION`" $(FINDLIB_CPPO)
