Add an .mli with documentation.

--- a/Makefile.filelist
+++ b/Makefile.filelist
@@ -30,6 +30,11 @@ IMPL += lib/tyxml/tyxml.cma
 INTF += lib/tyxml/*.cmi
 endif
 
+ifeq "${WITH_PPX}" "YES"
+OCAMLFIND_BIN += lib/ppx/${PPX}
+INTF += lib/ppx/*.cmi
+endif
+
 ifeq "${WITH_TOPLEVEL}" "YES"
 IMPL += lib/toplevel/jsooTop.cmo lib/toplevel/jsooTopError.cmo lib/toplevel/jsooTopCamlp4.cmo
 INTF += lib/toplevel/jsooTop.cmi lib/toplevel/jsooTopError.cmi
@@ -94,7 +99,3 @@ endif
 endif
 
 DOC := ${INTF:.cmi=.mli}
-
-ifeq "${WITH_PPX}" "YES"
-OCAMLFIND_BIN += lib/ppx/${PPX}
-endif
