--- a/Makefile.filelist
+++ b/Makefile.filelist
@@ -32,7 +32,13 @@ endif
 
 ifeq "${WITH_PPX}" "YES"
 OCAMLFIND_BIN += lib/ppx/${PPX}
+IMPL += lib/ppx/ppx_js.cma
 INTF += lib/ppx/*.cmi
+ifeq "${BEST}" "opt"
+ifeq "${NATDYNLINK}" "YES"
+IMPL += lib/ppx/ppx_js.cmx lib/ppx/ppx_js.cmxa lib/ppx/ppx_js.cmxs 
+endif
+endif
 endif
 
 ifeq "${WITH_TOPLEVEL}" "YES"
