--- a/Makefile.filelist
+++ b/Makefile.filelist
@@ -45,8 +45,7 @@ ifeq "${WITH_TOPLEVEL}" "YES"
 IMPL += lib/toplevel/jsooTop.cmo lib/toplevel/jsooTopError.cmo
 INTF += lib/toplevel/jsooTop.cmi lib/toplevel/jsooTopError.cmi
 ifeq ($(shell ocamlc -version | grep -q -E "4.0[^01]"; echo $$?),0)
-exit 0
-lib/toplevel/jsooTopCamlp4.cmo
+IMPL += lib/toplevel/jsooTopCamlp4.cmo
 endif
 endif
 
