--- a/Makefile.conf
+++ b/Makefile.conf
@@ -60,12 +60,5 @@ METAOCAML ?= 0
 
 VERSION_GIT := $(shell git log -n1 --pretty=format:%h 2> /dev/null)
 
-ifeq "${WITH_FINDLIB}" "YES"
-FINDLIB_CPPO=-D FINDLIB
-endif
-
 %.ml: %.cppo.ml
-	cppo $< -o $@ -V OCAML:`ocamlc -version` -D "JSOO_VERSION `cat ../VERSION`" $(FINDLIB_CPPO)
-
-%: %.cppo
-	cppo $< -o $@ -V OCAML:`ocamlc -version` -D "JSOO_VERSION `cat ../VERSION`" $(FINDLIB_CPPO)
+	cppo $< -o $@ -V OCAML:`ocamlc -version`
