made a couple of the primitives in runtime/bigstring.js accessible. They were already implemented, I just had to rename them and add them to the runtime Makefile. This was necessary to get a project using COW to compile, and appears to work.

--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,4 +1,4 @@
-FILES= 	mlString.js ieee_754.js int64.js md5.js marshal.js \
+FILES= 	bigstring.js mlString.js ieee_754.js int64.js md5.js marshal.js \
 	lexing.js parsing.js bigarray.js unix.js \
 	stdlib.js io.js fs.js jslib.js jslib_js_of_ocaml.js \
 	internalMod.js gc.js polyfill/json2.js
